[package]
name = "audiotoolbox"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/audiotoolbox-rs"
repository = "https://github.com/doom-fish/audiotoolbox-rs"
description = "Safe Rust bindings for Apple's AudioToolbox framework via a Swift bridge on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["audiotoolbox", "audio", "macos", "coreaudio", "apple"]
categories = ["multimedia::audio", "api-bindings", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "COVERAGE.md",
    "LICENSE-*",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "audiotoolbox"
crate-type = ["lib"]

[features]
default = []
cargo-clippy = []
raw-ffi = []

[dependencies]
apple-cf = { version = ">=0.2, <0.6", default-features = false }
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
strip = "none"
